--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Vehicle Inspection Dashboard</title>
-  <link rel="stylesheet" href="CssFile.css" />
+  <title>Vehicle Inspection</title>
+  <link rel="stylesheet" href="/static/CssFile.css" />
   <!-- مكتبة SheetJS لقراءة Excel -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 </head>
@@ -595,6 +595,6 @@
 
   </main>
   
-  <script src="script_excel.js"></script>
+  <script src="/static/script_excel.js"></script>
 </body>
 </html>
